# RigidTsfmReg

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vis_face_point.py  vis_reg.py
config/: facepoints.json  facepoints.py  facepoints_ct.json
registration/: PointSet.cpp  PointSet.h  Registration.cpp  Registration.h  TransformationEstimation.cpp  TransformationEstimation.h
